# idsia_quadrotor

./: README.md
assisted_joypad_flying/: CMakeLists.txt  package.xml
assisted_joypad_flying/include/assisted_joypad_flying/: assisted_joypad_flying.h  joypad_buttons_axes.h
assisted_joypad_flying/parameters/: default.yaml
assisted_joypad_flying/src/: assisted_joypad_flying.cpp
